# Agentic-AI-powered-Resume-optimizer-

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
core/: crew_manager.py
utils/: asyncio_compat.py  helpers.py  job_url_scraper.py  rag_processor.py
