[project]
name = "files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "crewai>=0.108.0",
    "crewai-tools>=0.76.0",
    "faiss-cpu>=1.7.4",
    "google-generativeai>=0.5.0",
    "langchain>=0.1.11,<0.2.0",
    "langchain-community>=0.0.29,<0.1.0",
    "langchain-core>=0.1.27,<0.2.0",
    "langchain-google-genai>=0.0.11",
    "langchain-groq>=0.1.3",
    "pydantic>=2.5.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.32.0",
    "streamlit-option-menu>=0.3.6",
    "typing-extensions>=4.9.0",
]
